--- a/frontend/src/app/components/master-page-preview/preview-title.component.html
+++ b/frontend/src/app/components/master-page-preview/preview-title.component.html
@@ -3,7 +3,7 @@
     <ng-container [ngSwitch]="network.val">
       <span *ngSwitchCase="'liquid'">Liquid </span>
       <span *ngSwitchCase="'liquidtestnet'">Liquid </span>
-      <span *ngSwitchDefault>Bitcoin </span>
+      <span *ngSwitchDefault>Earthcoin </span>
     </ng-container>
   </ng-container>
   <ng-content></ng-content>
