--- a/frontend/src/app/components/acceleration/acceleration-stats/acceleration-stats.component.html
+++ b/frontend/src/app/components/acceleration/acceleration-stats/acceleration-stats.component.html
@@ -10,7 +10,7 @@
     <div class="item">
       <h5 class="card-title" i18n="accelerator.total-boost">Total Bid Boost</h5>
       <div class="card-text">
-        <div>{{ stats.totalBidBoost / 100_000_000 | amountShortener: 4 }} <span class="symbol" i18n="shared.btc|BTC">BTC</span></div>
+        <div>{{ stats.totalBidBoost / 100_000_000 | amountShortener: 4 }} <span class="symbol" i18n="shared.btc|EAC">EAC</span></div>
         <span class="fiat">
           <app-fiat [value]="stats.totalBidBoost"></app-fiat>
         </span>
