--- a/frontend/src/app/components/balance-widget/balance-widget.component.html
+++ b/frontend/src/app/components/balance-widget/balance-widget.component.html
@@ -2,9 +2,9 @@
   <div class="card-body more-padding">
     <div class="balance-container" *ngIf="!isLoading; else loading">
       <div class="item">
-        <h5 class="card-title" i18n="dashboard.btc-holdings">BTC Holdings</h5>
+        <h5 class="card-title" i18n="dashboard.btc-holdings">EAC Holdings</h5>
         <div class="card-text">
-          {{ ((total) / 100_000_000) | number: '1.2-2' }} <span class="symbol" i18n="shared.btc|BTC">BTC</span>
+          {{ ((total) / 100_000_000) | number: '1.2-2' }} <span class="symbol" i18n="shared.btc|EAC">EAC</span>
         </div>
         <div class="symbol">
           <app-fiat [value]="(total)"></app-fiat>
@@ -13,7 +13,7 @@
       <div class="item">
         <h5 class="card-title" i18n="dashboard.7d-change">Change (7d)</h5>
         <div class="card-text">
-          {{ delta7d > 0 ? '+' : ''}}{{ ((delta7d) / 100_000_000) | number: '1.2-2' }} <span class="symbol" i18n="shared.btc|BTC">BTC</span>
+          {{ delta7d > 0 ? '+' : ''}}{{ ((delta7d) / 100_000_000) | number: '1.2-2' }} <span class="symbol" i18n="shared.btc|EAC">EAC</span>
         </div>
         <div class="symbol">
           <app-fiat [value]="delta7d"></app-fiat>
@@ -22,7 +22,7 @@
       <div class="item">
         <h5 class="card-title" i18n="dashboard.30d-change">Change (30d)</h5>
         <div class="card-text">
-          {{ delta30d > 0 ? '+' : ''}}{{ ((delta30d) / 100_000_000) | number: '1.2-2' }} <span class="symbol" i18n="shared.btc|BTC">BTC</span>
+          {{ delta30d > 0 ? '+' : ''}}{{ ((delta30d) / 100_000_000) | number: '1.2-2' }} <span class="symbol" i18n="shared.btc|EAC">EAC</span>
         </div>
         <div class="symbol">
           <app-fiat [value]="delta30d"></app-fiat>
@@ -35,7 +35,7 @@
 <ng-template #loading>
   <div class="balance-skeleton">
     <div class="item">
-      <h5 class="card-title" i18n="dashboard.btc-holdings">BTC Holdings</h5>
+      <h5 class="card-title" i18n="dashboard.btc-holdings">EAC Holdings</h5>
       <div class="card-text">
         <div class="skeleton-loader"></div>
         <div class="skeleton-loader"></div>
