--- a/frontend/src/app/components/bitcoin-invoice/bitcoin-invoice.component.html
+++ b/frontend/src/app/components/bitcoin-invoice/bitcoin-invoice.component.html
@@ -16,14 +16,14 @@
 
       <div *ngIf="availableMethods.length > 1" class="form-group">
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
-          <!-- <label *ngIf="invoice.addresses.BTC" class="btn btn-primary" [ngClass]="{'active': paymentForm.get('method')?.value === 'chain'}">
+          <!-- <label *ngIf="invoice.addresses.EAC" class="btn btn-primary" [ngClass]="{'active': paymentForm.get('method')?.value === 'chain'}">
             <input type="radio" value="chain" formControlName="method"> <fa-icon [icon]="['fas', 'link']" [fixedWidth]="true" title="Onchain"></fa-icon>
           </label> -->
-          <label *ngIf="invoice.addresses.BTC_LightningLike" class="btn btn-primary" [ngClass]="{'active': paymentForm.get('method')?.value === 'lightning'}">
+          <label *ngIf="invoice.addresses.EAC_LightningLike" class="btn btn-primary" [ngClass]="{'active': paymentForm.get('method')?.value === 'lightning'}">
             <input type="radio" value="lightning" formControlName="method"> <fa-icon [icon]="['fas', 'bolt']" [fixedWidth]="true" title="Lightning"></fa-icon>
           </label>
-          <!-- <label *ngIf="invoice.addresses.LBTC" class="btn btn-primary" [ngClass]="{'active': paymentForm.get('method')?.value === 'lbtc'}">
-            <input type="radio" value="lbtc" formControlName="method"> <fa-icon [icon]="['fas', 'tint']" [fixedWidth]="true" title="Liquid Bitcoin"></fa-icon>
+          <!-- <label *ngIf="invoice.addresses.LEAC" class="btn btn-primary" [ngClass]="{'active': paymentForm.get('method')?.value === 'lbtc'}">
+            <input type="radio" value="lbtc" formControlName="method"> <fa-icon [icon]="['fas', 'tint']" [fixedWidth]="true" title="Liquid Earthcoin"></fa-icon>
           </label> -->
         </div>
       </div>
@@ -33,35 +33,35 @@
     <ng-template [ngIf]="paymentForm.get('method')?.value === 'chain' && invoice">
 
         <div class="qr-wrapper" [class.mt-0]="minimal">
-          <a [href]="bypassSecurityTrustUrl('bitcoin:' + invoice.addresses.BTC + '?amount=' + invoice.btcDue)" target="_blank">
-              <app-qrcode imageUrl="/resources/bitcoin-logo.png" [size]="200" [data]="'bitcoin:' + invoice.addresses.BTC + '?amount=' + invoice.btcDue"></app-qrcode>
+          <a [href]="bypassSecurityTrustUrl('bitcoin:' + invoice.addresses.EAC + '?amount=' + invoice.btcDue)" target="_blank">
+              <app-qrcode imageUrl="/resources/bitcoin-logo.png" [size]="200" [data]="'bitcoin:' + invoice.addresses.EAC + '?amount=' + invoice.btcDue"></app-qrcode>
           </a>
         </div>
 
         <div class="input-group input-group-sm info-group">
-          <input type="text" class="form-control input-dark" readonly [value]="invoice.addresses.BTC">
+          <input type="text" class="form-control input-dark" readonly [value]="invoice.addresses.EAC">
           <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" ><app-clipboard [text]="invoice.addresses.BTC"></app-clipboard></button>
+              <button class="btn btn-outline-secondary" type="button" ><app-clipboard [text]="invoice.addresses.EAC"></app-clipboard></button>
           </div>
         </div>
         @if (!minimal) {
-          <p>{{ invoice.btcDue | number: '1.0-8' }} <span class="symbol">BTC</span></p>
+          <p>{{ invoice.btcDue | number: '1.0-8' }} <span class="symbol">EAC</span></p>
         }
 
     </ng-template>
 
-    <ng-template [ngIf]="paymentForm.get('method')?.value === 'lightning' && invoice && invoice.addresses.BTC_LightningLike">
+    <ng-template [ngIf]="paymentForm.get('method')?.value === 'lightning' && invoice && invoice.addresses.EAC_LightningLike">
 
         <div class="qr-wrapper" [class.mt-0]="minimal">
-          <a [href]="bypassSecurityTrustUrl('lightning:' + invoice.addresses.BTC_LightningLike)" target="_blank">
-              <app-qrcode imageUrl="/resources/lightning-logo.png" [size]="200" [data]="invoice.addresses.BTC_LightningLike.toUpperCase()"></app-qrcode>
+          <a [href]="bypassSecurityTrustUrl('lightning:' + invoice.addresses.EAC_LightningLike)" target="_blank">
+              <app-qrcode imageUrl="/resources/lightning-logo.png" [size]="200" [data]="invoice.addresses.EAC_LightningLike.toUpperCase()"></app-qrcode>
           </a>
         </div>
 
         <div class="input-group input-group-sm info-group">
-          <input type="text" class="form-control input-dark" readonly [value]="invoice.addresses.BTC_LightningLike">
+          <input type="text" class="form-control input-dark" readonly [value]="invoice.addresses.EAC_LightningLike">
           <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button"><app-clipboard [text]="invoice.addresses.BTC_LightningLike"></app-clipboard></button>
+              <button class="btn btn-outline-secondary" type="button"><app-clipboard [text]="invoice.addresses.EAC_LightningLike"></app-clipboard></button>
           </div>
         </div>
 
@@ -74,19 +74,19 @@
     <ng-template [ngIf]="invoice && (paymentForm.get('method')?.value === 'lbtc' || paymentForm.get('method')?.value === 'tlbtc')">
 
         <div class="qr-wrapper" [class.mt-0]="minimal">
-          <a [href]="bypassSecurityTrustUrl('liquidnetwork:' + invoice.addresses.LBTC + '?amount=' + invoice.btcDue + '&assetid=6f0279e9ed041c3d710a9f57d0c02928416460c4b722ae3457a11eec381c526d')" target="_blank">
-              <app-qrcode imageUrl="/resources/liquid-bitcoin.png" [size]="200" [data]="'liquidnetwork:' + invoice.addresses.LBTC + '?amount=' + invoice.btcDue + '&assetid=6f0279e9ed041c3d710a9f57d0c02928416460c4b722ae3457a11eec381c526d'"></app-qrcode>
+          <a [href]="bypassSecurityTrustUrl('liquidnetwork:' + invoice.addresses.LEAC + '?amount=' + invoice.btcDue + '&assetid=6f0279e9ed041c3d710a9f57d0c02928416460c4b722ae3457a11eec381c526d')" target="_blank">
+              <app-qrcode imageUrl="/resources/liquid-bitcoin.png" [size]="200" [data]="'liquidnetwork:' + invoice.addresses.LEAC + '?amount=' + invoice.btcDue + '&assetid=6f0279e9ed041c3d710a9f57d0c02928416460c4b722ae3457a11eec381c526d'"></app-qrcode>
           </a>
         </div>
         <br>
         <div class="input-group input-group-sm info-group">
-          <input type="text" class="form-control input-dark" readonly [value]="invoice.addresses.LBTC" />
+          <input type="text" class="form-control input-dark" readonly [value]="invoice.addresses.LEAC" />
           <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" ><app-clipboard [text]="invoice.addresses.LBTC"></app-clipboard></button>
+              <button class="btn btn-outline-secondary" type="button" ><app-clipboard [text]="invoice.addresses.LEAC"></app-clipboard></button>
           </div>
         </div>
         @if (!minimal) {
-          <p>{{ invoice.btcDue | number: '1.0-8' }} <span class="symbol">BTC</span></p>
+          <p>{{ invoice.btcDue | number: '1.0-8' }} <span class="symbol">EAC</span></p>
         }
 
     </ng-template>
