--- a/frontend/src/app/shared/components/global-footer/global-footer.component.html
+++ b/frontend/src/app/shared/components/global-footer/global-footer.component.html
@@ -14,7 +14,7 @@
         @if (!enterpriseInfo?.footer_img) {
           <p class="explore-tagline-mobile">
             @if (officialMempoolSpace) {
-              <ng-container i18n="@@7deec1c1520f06170e1f8e8ddfbe4532312f638f">Explore the full Bitcoin ecosystem</ng-container>
+              <ng-container i18n="@@7deec1c1520f06170e1f8e8ddfbe4532312f638f">Explore the full Earthcoin ecosystem</ng-container>
               <ng-template [ngIf]="locale.substr(0, 2) === 'en'">&reg;</ng-template>  
             } @else {
               <ng-container i18n="shared.be-your-own-explorer">Be your own explorer</ng-container>
@@ -58,7 +58,7 @@
           </a>
           <p class="explore-tagline-desktop">
             @if (officialMempoolSpace) {
-              <ng-container i18n="@@7deec1c1520f06170e1f8e8ddfbe4532312f638f">Explore the full Bitcoin ecosystem</ng-container>
+              <ng-container i18n="@@7deec1c1520f06170e1f8e8ddfbe4532312f638f">Explore the full Earthcoin ecosystem</ng-container>
               <ng-template [ngIf]="locale.substr(0, 2) === 'en'">&reg;</ng-template>  
             } @else {
               <ng-container i18n="shared.be-your-own-explorer">Be your own explorer</ng-container>
